--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -327,3 +327,10 @@
 .material-icons.royalblue {
   color: royalblue;
 }
+
+.underline{
+    height: 4px;
+    width: 100px;
+    background-color: #2874f0;
+    margin: 10px 0px;
+}
