--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -308,25 +308,7 @@
     text-align: center;
 }
 
-/* COMMON */
-.material-icons {
-  color:  rgba(0,0,0,0.87);
-}
-.material-icons.md-18 {
-    font-size: 18px;
-  }
-.material-icons.md-36 {
-  font-size: 36px;
-}
-.material-icons.md-48 {
-  font-size: 48px;
-}
-.material-icons.tomato {
-  color: tomato;
-}
-.material-icons.royalblue {
-  color: royalblue;
-}
+
 
 .underline{
     height: 4px;
@@ -369,3 +351,52 @@
     color: #fff;
     width: 20px;
 }
+
+/* rating */
+
+  .rating-css div{
+    color: #ffe400;
+    font-size: 30px;
+    font-family: sans-serif;
+    font-weight: 800;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 20px 0;
+}
+
+.rating-css input{
+    display:none;
+}
+
+
+.rating-css input + label{
+    font-size: 60px;
+    text-shadow: 1px 1px 0 #8f8420;
+    cursor: pointer;
+}
+
+
+.rating-css input:checked + label ~ label {
+    color: #b4afaf;
+}
+
+
+.rating-css label:active {
+    transform: scale(0.8);
+    transition: 0.3s ease;
+}
+
+/* End of Star Rating */
+
+
+
+
+
+
+
+
+
+
+
+
+
